--- a/research.html
+++ b/research.html
@@ -1,52 +1,42 @@
----
-layout: default
-title: Research
-permalink: /research/
----
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tiago Belintani – Research</title>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
 
-# Research
+<div class="container">
 
-My research focuses on the **phylogeny, evolution, and diversification** of medically and ecologically important arthropods, particularly within **Triatominae** and **Theraphosinae** (tarantulas). My work integrates **molecular phylogenomics**, **morphometrics**, and **bioinformatics** to explore evolutionary relationships, biogeography, and the mechanisms shaping species diversity.
+<h1>Research <span></span></h1>
 
-## Current Projects
+<p class="intro">
+My research focuses on evolutionary biology, systematics, and phylogenomics of Neotropical organisms. Main areas include <em>Triatominae</em> (Chagas disease vectors) and <em>Theraphosidae</em> (tarantulas).
+</p>
 
-**2025 - Present: Phylogenetic relationships in Grammostolini (Theraphosinae, Mygalomorphae) via UCE-based phylogenomics**  
-This project investigates the evolutionary history of the **Theraphosinae** subfamily, one of the most diverse groups of tarantulas, with over 500 species across the Neotropics. Using **ultraconserved elements (UCEs)**, we aim to clarify relationships within the **Grammostolini** tribe, addressing issues like **hybridization**, **introgression**, and **phylogenetic incongruence**. This research involves UCE library construction, DNA extraction, sequencing, and advanced **bioinformatic analyses**. Preliminary results reveal a complex evolutionary history influenced by both hybridization and introgression.  
-**Students involved:** PhD (1)  
-**Collaborators:** Tiago Belintani (PI), José Paulo Leite Guadanucci, Chris Hamilton, Rafael Fonseca-Ferreira, Milke J.A. Morales  
-**Funding:** FAPESP  
+<div class="section">
+<h2>Research Themes</h2>
+<ul>
+    <li>Evolutionary phylogenomics of insects and arachnids</li>
+    <li>Geometric morphometrics of anatomical structures</li>
+    <li>Species delimitation and integrative taxonomy</li>
+    <li>Comparative genomics and molecular systematics</li>
+    <li>Biogeography and diversification patterns</li>
+</ul>
+</div>
 
-**2023 - Present: Evolution and biogeography of Hapalopini and Grammostolini tarantulas**  
-This study explores the evolution and **biogeographic diversification** of tarantulas in the **Hapalopini** and **Grammostolini** tribes. Morphological characters, particularly urticating hairs, have historically guided phylogenetic hypotheses. By applying **UCE phylogenomics**, we test the **monophyly** of these groups, analyze morphological trait evolution, and reconstruct ancestral distributions. Samples come from field collections and zoological collections in South America and Mexico. The project provides a comprehensive view of diversification and evolution, serving as a model for studying morphologically similar groups with conflicting genetic signals.  
-**Students involved:** Undergraduate (5), Master’s (10), PhD (5)  
-**Collaborators:** Tiago Belintani (PI), José Paulo Leite Guadanucci  
-**Funding:** FAPESP  
+<p style="text-align:center; margin-top:40px;"><a href="index.html">← Back to Home</a></p>
 
-**2022 – 2025: Phylogenomics of Triatominae (Hemiptera, Reduviidae) using supermatrix and coalescent approaches**  
-This project integrates **genomic** and **transcriptomic datasets** to investigate phylogenetic relationships in **Triatominae**. Using ortholog identification, biallelic marker analysis, and **supermatrix/coalescent phylogenetic approaches**, we test subfamily monophyly, relationships among genera and tribes, and develop new **mtDNA and nuDNA markers**. The study also provides novel **methodological insights** for phylogenetic studies of Chagas disease vectors.  
-**Status:** Completed  
-**Collaborators:** Tiago Belintani (PI), João Aristeu da Rosa  
-**Funding:** UNESP  
+</div>
 
-## Previous Projects
+<footer>
+© 2025 Tiago Belintani<br>
+<span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
+</footer>
 
-**2018 – 2022: Phenotypic identification and transcriptome study of Triatominae**  
-This project focused on **species identification** and transcriptomic profiling via **RNA-seq**. By sequencing 55 Triatominae species from 194 colonies, we studied differential gene expression in heads and salivary glands between sexes and species. Results support species identification, evolutionary studies, and vector control efforts, particularly for **Chilean *Mepraia* species**.  
-**Students involved:** PhD (3)  
-**Collaborators:** Tiago Belintani, Jader Oliveira, Heloisa Pinotti, João Aristeu da Rosa (PI), Reinaldo Brito, Daniel Frias Lasserre  
-**Funding:** FAPESP  
-
-**2017 – 2022: Transcriptome study of *Mepraia* species using RNA-seq**  
-We conducted **transcriptomic analyses** of three endemic Chilean *Mepraia* species to validate species divergence, assess **gene flow**, and investigate **introgression events**. Results reveal **reticulate phylogenies** and hybridization effects shaping genetic diversity, providing insights into **evolution**, vector capacity, and speciation dynamics.  
-**Students involved:** Undergraduate (1), Professional Master’s (1), PhD (4)  
-**Collaborators:** Tiago Belintani, João Aristeu da Rosa (PI), Jader Oliveira, Vinícius Fernandes de Paiva, Carlos Congrains, Samira Chahad-Ehlers, Reinaldo Alves de Brito  
-**Funding:** CAPES  
-
-**2014 – 2016: Phylogeny of *Triatoma garciabesi*, *T. guasayana*, and *T. sordida***  
-Morphological, morphometric, and molecular analyses were performed to study relationships among these **Chagas disease vectors**, contributing to **epidemiological understanding** and **vector control strategies** in the Neotropics.  
-**Funding:** FAPESP  
-
----
-
-For more detailed data and ongoing projects, please visit the [Repositories](/repositories) section.
+</body>
+</html>
 
