--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,43 @@
----
-layout: default
-title: Contact
-permalink: /contact/
----
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tiago Belintani – Contact</title>
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
 
-# Contact
+<div class="container">
 
-**Name:** Tiago Belintani  
-**Lattes ID:** 8948388411348223  
-**ORCID ID:** [https://orcid.org/0000-0001-9485-1145](https://orcid.org/0000-0001-9485-1145)  
+<h1>Contact <span></span></h1>
+<p class="intro">
+Feel free to reach out for collaboration, inquiries, or questions regarding my research.
+</p>
 
-**Email (primary):** [tiagobellintani@gmail.com](mailto:tiagobellintani@gmail.com)  
-**Email (alternative):** [tiago.belintani@unesp.br](mailto:tiago.belintani@unesp.br)  
+<div class="section">
+<h2>📧 Email</h2>
+<p><a href="mailto:tiago.belintani@example.com">tiago.belintani@example.com</a></p>
+</div>
 
-For further inquiries or collaboration requests, please feel free to reach out via email.
+<div class="section">
+<h2>🌐 Social / Academic Profiles</h2>
+<ul>
+    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a></li>
+    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
+    <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
+</ul>
+</div>
+
+<p style="text-align:center; margin-top:40px;"><a href="index.html">← Back to Home</a></p>
+
+</div>
+
+<footer>
+© 2025 Tiago Belintani<br>
+<span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
+</footer>
+
+</body>
+</html>
