--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ footer {
         </ul>
     </div>
 
-    <!-- Explore / Markdown Links -->
+    <!-- Explore / HTML Links -->
     <div class="section">
         <h2>📚 Explore</h2>
         <div class="section-divider">
@@ -275,9 +275,9 @@ footer {
             </svg>
         </div>
         <ul>
-            <li><a href="contact.md" target="_blank">Contact</a></li>
-            <li><a href="publications.md" target="_blank">Publications</a></li>
-            <li><a href="research.md" target="_blank">Research</a></li>
+            <li><a href="contact.html" target="_blank">Contact</a></li>
+            <li><a href="publications.html" target="_blank">Publications</a></li>
+            <li><a href="research.html" target="_blank">Research</a></li>
         </ul>
     </div>
 
@@ -301,4 +301,3 @@ footer {
 
 </body>
 </html>
-
