--- a/research.html
+++ b/research.html
@@ -3,40 +3,56 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tiago Belintani – Research</title>
+<title>Research | Tiago Belintani</title>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/style.css">
+<style>
+  body::before {
+    content: "";
+    position: fixed; top:0; left:0; right:0; bottom:0;
+    background: url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center center no-repeat;
+    background-size: cover;
+    opacity: 0.25;
+    z-index: 0;
+    pointer-events: none;
+  }
+  body { position: relative; z-index:1; font-family: 'Courier New', monospace; color:#333; background:#fdfdfd; margin:0; padding:0; min-height:100vh; }
+  .container { max-width:1120px; margin:0 auto; padding:40px 20px; position: relative; z-index:1; }
+  h1, h2 { font-family: 'Space Grotesk', sans-serif; text-align:center; color:#111; }
+  h1 { font-size:3em; margin-bottom:0.2em; }
+  h1 span { display:block; margin:0.5em auto 0 auto; width:64px; border-bottom:3px solid #007b8a; border-radius:2px; }
+  h2 { font-size:2em; margin-bottom:1em; }
+  p, li { line-height:1.7em; font-size:1.1em; }
+  ul { padding-left:20px; }
+  a { color:#007b8a; font-weight:bold; text-decoration:none; }
+  a:hover { text-decoration:underline; }
+  .section { background: rgba(245,251,251,0.7); border-radius:12px; box-shadow:0 1px 10px rgba(0,124,138,0.07); padding:20px 24px; margin-bottom:20px; }
+</style>
 </head>
 <body>
-
 <div class="container">
+  <h1>Tiago Belintani <span></span></h1>
+  <h2>Research</h2>
 
-<h1>Research <span></span></h1>
+  <div class="section">
+    <h3>Focus Areas</h3>
+    <ul>
+      <li><strong>Triatominae:</strong> Systematics, taxonomy, morphology, and phylogenomics of blood-feeding insects.</li>
+      <li><strong>Theraphosidae:</strong> Evolution, biogeography, and species delimitation in tarantulas.</li>
+      <li><strong>Genomics & Bioinformatics:</strong> Comparative genomic analyses and evolutionary modeling.</li>
+      <li><strong>Morphometrics:</strong> Geometric morphometrics and integrative taxonomy methods.</li>
+    </ul>
+  </div>
 
-<p class="intro">
-My research focuses on evolutionary biology, systematics, and phylogenomics of Neotropical organisms. Main areas include <em>Triatominae</em> (Chagas disease vectors) and <em>Theraphosidae</em> (tarantulas).
-</p>
-
-<div class="section">
-<h2>Research Themes</h2>
-<ul>
-    <li>Evolutionary phylogenomics of insects and arachnids</li>
-    <li>Geometric morphometrics of anatomical structures</li>
-    <li>Species delimitation and integrative taxonomy</li>
-    <li>Comparative genomics and molecular systematics</li>
-    <li>Biogeography and diversification patterns</li>
-</ul>
+  <div class="section">
+    <h3>Current Projects</h3>
+    <ul>
+      <li>Phylogenomic reconstruction of <em>Mepraia</em> and related Triatominae species complexes.</li>
+      <li>Integrative taxonomy of South American tarantulas.</li>
+      <li>High-throughput DNA sequencing to investigate hybridization and evolutionary patterns.</li>
+      <li>Development of interactive datasets and phylogenetic pipelines for Neotropical arthropods.</li>
+    </ul>
+  </div>
 </div>
-
-<p style="text-align:center; margin-top:40px;"><a href="index.html">← Back to Home</a></p>
-
-</div>
-
-<footer>
-© 2025 Tiago Belintani<br>
-<span style="font-size:0.85em;color:#aaa;">Sapientia et disciplina</span>
-</footer>
-
 </body>
 </html>
 
