--- a/publications.html
+++ b/publications.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Publications | Tiago Belintani</title>
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
 <style>
-  /* --- Fundo e tipografia --- */
-  body::before {
+body::before {
     content: "";
     position: fixed;
     top: 0; left: 0; right: 0; bottom: 0;
@@ -17,9 +16,8 @@
     opacity: 0.25;
     z-index: 0;
     pointer-events: none;
-  }
-
-  body {
+}
+body {
     position: relative;
     z-index: 1;
     font-family: 'Courier New', monospace;
@@ -27,48 +25,89 @@
     background: #fdfdfd;
     margin: 0; padding: 0;
     min-height: 100vh;
-  }
+}
 
-  .container {
+/* ================= TOP NAVIGATION ================= */
+.top-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(255,255,255,0.9);
+    backdrop-filter: blur(6px);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    z-index: 999;
+}
+.top-nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 12px 0;
+    gap: 40px;
+}
+.top-nav ul li a {
+    text-decoration: none;
+    font-family: 'Space Grotesk', sans-serif;
+    font-weight: 500;
+    font-size: 1em;
+    color: #007b8a;
+    transition: color 0.2s, border-bottom 0.2s;
+    padding-bottom: 2px;
+}
+.top-nav ul li a:hover {
+    color: #004f59;
+    border-bottom: 2px solid #007b8a;
+}
+
+.container {
     max-width: 1120px;
     margin: 0 auto;
-    padding: 40px 20px;
+    padding: 100px 20px 40px;
     position: relative;
     z-index: 1;
-  }
+}
 
-  h1, h2 {
+h1, h2 {
     font-family: 'Space Grotesk', sans-serif;
     text-align: center;
     color: #111;
-  }
+}
+h1 { font-size: 3em; margin-bottom: 0.2em; }
+h1 span { display:block; margin:0.5em auto 0 auto; width:64px; border-bottom:3px solid #007b8a; border-radius:2px; }
+h2 { font-size: 2em; margin-bottom: 1em; }
 
-  h1 { font-size: 3em; margin-bottom: 0.2em; }
-  h1 span { display:block; margin:0.5em auto 0 auto; width:64px; border-bottom:3px solid #007b8a; border-radius:2px; }
-  h2 { font-size: 2em; margin-bottom: 1em; }
-
-  .publication, .book-chapter {
+.publication, .book-chapter {
     background: rgba(245,251,251,0.7);
     border-radius: 12px;
     box-shadow: 0 1px 10px rgba(0,124,138,0.07);
     padding: 16px 24px;
     margin-bottom: 20px;
-  }
-
-  .publication a, .book-chapter a {
+}
+.publication a, .book-chapter a {
     color: #007b8a;
     font-weight: bold;
     text-decoration: none;
-  }
-
-  .publication a:hover, .book-chapter a:hover {
+}
+.publication a:hover, .book-chapter a:hover {
     text-decoration: underline;
-  }
+}
+p { line-height: 1.7em; }
 
-  p { line-height: 1.7em; }
 </style>
 </head>
 <body>
+
+<!-- Top Navigation -->
+<nav class="top-nav">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
 <div class="container">
   <h1>Tiago Belintani <span></span></h1>
   <h2>Publications</h2>
@@ -83,8 +122,6 @@
     Palavras-chave: Taxonomia, Triatominae, Filogenia, Taxonomia. Áreas do conhecimento: Entomologia e Malacologia de Parasitos e Vetores. Referências adicionais: Inglês.
   </div>
 
-  <!-- Adicione mais publicações seguindo o mesmo padrão -->
-
   <h2>Book Chapters</h2>
 
   <div class="book-chapter">
@@ -92,8 +129,7 @@
     Estratégias laboratoriais para o diagnóstico da doença de Chagas. Rio Branco: Stricto Sensu, 2023. <br>
     <a href="https://sseditora.com.br/ebooks/atualidades-em-medicina-tropical-no-brasil-interdisciplinaridade-2/" target="_blank">Link para e-book</a>
   </div>
-
-  <!-- Adicione mais capítulos seguindo o mesmo padrão -->
 </div>
+
 </body>
 </html>
