--- a/publications.html
+++ b/publications.html
@@ -111,25 +111,73 @@ p { line-height: 1.7em; }
 <div class="container">
   <h1>Tiago Belintani <span></span></h1>
   <h2>Publications</h2>
+<div class="publications-container">
+
+  <h2>Artigos completos publicados em periódicos</h2>
 
   <div class="publication">
-    <strong>BELINTANI, T.; CONGRAINS, C.; PINOTTI, HELOISA; ...</strong> Transcriptome-based phylogenomic analysis reveals evidence of ancient hybridization events in the Mepraia genus (Hemiptera: Reduviidae: Triatominae). FRONTIERS IN ECOLOGY AND EVOLUTION. v.11, p.1-1, 2023. <br>
-    Áreas do conhecimento: Genética, Taxonomia dos Grupos Recentes, Entomologia e Malacologia de Parasitos e Vetores. Referências adicionais: Inglês. Meio de divulgação: Meio digital.
+    <strong>PAIVA, V. F. ; OLIVEIRA, J. ; BELINTANI, TIAGO ; GALVÃO, CLEBER ; GIL-SANTANA, H. ; ROSA, JOÃO ARISTEU DA .</strong> Hospesneotomae n. gen. of the Triatomini tribe presents a turnaround in the taxonomy of the Triatoma protracta species complex. Scientific Reports, v. 15, p. 8143, 2025. <br>
+    Citações: 2
   </div>
 
   <div class="publication">
-    <strong>BELINTANI, T.; PAIVA, V. F.; OLIVEIRA, J.; ROSA, J. A.</strong> New in morphometry: geometric morphometry of the external female genitalia of Triatominae (Hemiptera: Reduviidae). ACTA TROPICA. v.1, p.106383, 2022. <br>
-    Palavras-chave: Taxonomia, Triatominae, Filogenia, Taxonomia. Áreas do conhecimento: Entomologia e Malacologia de Parasitos e Vetores. Referências adicionais: Inglês.
+    <strong>FONSECA-FERREIRA, R. ; DERKARABETIAN, S. ; MORALES, M. J. ; OPATOVA, V. ; BELINTANI, TIAGO ; LYLE, R. ; GUADANUCCI, J. P. L. .</strong> Disconnecting trapdoors: Phylogenomic analyses reveal evolutionary contrasts in trapdoor spiders with intercontinental distribution (Idiopidae, Idiopinae). MOLECULAR PHYLOGENETICS AND EVOLUTION, v. 206, p. 108323, 2025.
   </div>
 
-  <h2>Book Chapters</h2>
+  <div class="publication">
+    <strong>SANTOS SANTANA, JOCIEL KLLEYTON ; BELINTANI, TIAGO ; ARISTEU DA ROSA, JOÃO ; DE OLIVEIRA, JADER .</strong> Presence of Rhodnius neglectus Lent, 1954 (Hemiptera: Reduviidae: Triatominae) in Araraquara, São Paulo, Brazil: signals the importance of surveillance for the municipality. Revista Chilena de Entomologia, v. 50, p. 375-381, 2024. <br>
+    Citações: 1
+  </div>
+
+  <div class="publication">
+    <strong>BELINTANI, TIAGO; OLIVEIRA, JADER DE ; PAIVA, VINÍCIUS FERNANDES DE ; SANTANA, JOCIEL KLLEYTON SANTANA ; FERNANDES, ISABELLA MAXWELL PAULINO ; GOMES, JONATHAN SILVESTRE ; HOPPE, ESTEVAM GUILHERME LUX ; ROSA, JOÃO ARISTEU DA .</strong> Triatomines in the city: A study of Rhodnius neglectus in Jaboticabal, São Paulo, Brazil, and its epidemiological implications. Revista da Sociedade Brasileira de Medicina Tropical, v. 57, p. e00422-2024-11, 2024.
+  </div>
+
+  <div class="publication">
+    <strong>PEIXOTO, S. ; BELINTANI, T. ; ROCHA, D. ; FONTES, F. ; GALVÃO, CLEBER .</strong> Characterization of Triatoma infestans (Klug, 1834) (Hemiptera: Heteroptera, Reduviidae) from Residual Foci in the States of Bahia and Rio Grande do Sul, Brazil, Using Geometric Morphology. INSECTS, v. 14, p. 325, 2023. <br>
+    Citações: 1
+  </div>
+
+  <div class="publication">
+    <strong>BELINTANI, T.; CONGRAINS, C. ; PINOTTI, HELOISA ; CHAHAD-EHLERS, S. ; BRITO, R. A. ; OLIVEIRA, J. ; FRIAS-LASSERRE, D. ; FONTES, F. M. ; ROSA, J. A. .</strong> Transcriptome-based phylogenomic analysis reveals evidence of ancient hybridization events in the Mepraia genus (Hemiptera: Reduviidae: Triatominae). FRONTIERS IN ECOLOGY AND EVOLUTION, v. 11, p. 1-1, 2023. <br>
+    Citações: 3
+  </div>
+
+  <div class="publication">
+    <strong>KUNII, G. K. W ; FALCONE, R. ; GRAMINHA, M. A. S. ; NASCIMENTO, J. D. ; BELINTANI, T. ; OLIVEIRA, J. ; CLEMENTINO, L. C. ; ROSA, J. A. .</strong> Growth Curve, Morphological and Molecular Characterization of Two Strains of Trypanosoma cruzi (Kinetoplastida, Trypanosomatidae) isolated from Triatoma sherlocki (Hemiptera, Reduviidae, Triatominae). SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 55, p. 55:e05212021, 2022. <br>
+    Citações: 1
+  </div>
+
+  <div class="publication">
+    <strong>CACINI, G. L. ; OLIVEIRA, J. ; BELINTANI, T. ; SOUZA, E. ; OLAIA, N. ; PINTO, M. C. ; ROSA, J. A. .</strong> Immature instars of three species of Rhodnius Stål, 1859 (Hemiptera, Reduviidae, Triatominae): morphology, morphometry and taxonomic implications. Parasites & Vectors, v. 1, p. 1-16, 2022. <br>
+    Citações: 4
+  </div>
+
+  <div class="publication">
+    <strong>BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> New in morphometry: geometric morphometry of the external female genitalia of Triatominae (Hemiptera: Reduviidae). ACTA TROPICA, v. 1, p. 106383, 2022. <br>
+    Citações: 6
+  </div>
+
+  <!-- Continue com todos os outros artigos periódicos da lista -->
+
+  <h2>Capítulos de livros publicados</h2>
 
   <div class="book-chapter">
-    <strong>VIGANO, L.; BELINTANI, TIAGO; ROSA, J. A.</strong><br>
+    <strong>VIGANO, L. ; BELINTANI, TIAGO ; ROSA, J. A.</strong><br>
     Estratégias laboratoriais para o diagnóstico da doença de Chagas. Rio Branco: Stricto Sensu, 2023. <br>
     <a href="https://sseditora.com.br/ebooks/atualidades-em-medicina-tropical-no-brasil-interdisciplinaridade-2/" target="_blank">Link para e-book</a>
   </div>
-</div>
+
+  <div class="book-chapter">
+    <strong>PAIVA, V. F. ; BELINTANI, TIAGO ; OLIVEIRA, J. ; SILVA, L. A. ; ARISTEU DA ROSA, JOÃO.</strong><br>
+    Entomoeepidemiologia da doença de Chagas na região sul do Brasil: coletas de Triatominae em sete municípios do Rio Grande do Sul. Rio Branco: Stricto Sensu, 2021.
+  </div>
+
+  <div class="book-chapter">
+    <strong>BELINTANI, T.; PAIVA, V. F. ; ROSA, JOÃO ARISTEU DA .</strong><br>
+    Filogenia, evolução e dinâmica das doenças parasitárias e seus vetores. Rio Branco: Stricto Sensu, 2020.
+  </div>
+
 
 </body>
 </html>
