--- a/contact.html
+++ b/contact.html
@@ -112,10 +112,11 @@ a:hover { text-decoration: underline; }
   <div class="section contact-info">
     <p>Feel free to reach out via email or professional networks:</p>
     <ul>
-        <li>Email: <a href="mailto:tiago.belintani@example.com">tiago.belintani@example.com</a></li>
-        <li>Google Scholar: <a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Profile</a></li>
-        <li>ResearchGate: <a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">Profile</a></li>
-        <li>ORCID: <a href="https://orcid.org/0000-0001-9485-1145" target="_blank">Profile</a></li>
+        <li>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></li>
+        <li>Email: <a href="mailto:tiago.belintani@unesp.com">tiago.belintani@unesp.br</a></li>
+        <li>Google Scholar: <a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">MyProfile</a></li>
+        <li>ResearchGate: <a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">MyProfile</a></li>
+        <li>ORCID: <a href="https://orcid.org/0000-0001-9485-1145" target="_blank">MyProfile</a></li>
     </ul>
   </div>
 
