--- a/publications.html
+++ b/publications.html
@@ -113,6 +113,8 @@ p { line-height: 1.7em; }
   <h2>Publications</h2>
 <div class="publications-container">
 
+  <div class="publications-container">
+
   <h2>Artigos completos publicados em periódicos</h2>
 
   <div class="publication">
@@ -121,7 +123,7 @@ p { line-height: 1.7em; }
   </div>
 
   <div class="publication">
-    <strong>FONSECA-FERREIRA, R. ; DERKARABETIAN, S. ; MORALES, M. J. ; OPATOVA, V. ; BELINTANI, TIAGO ; LYLE, R. ; GUADANUCCI, J. P. L. .</strong> Disconnecting trapdoors: Phylogenomic analyses reveal evolutionary contrasts in trapdoor spiders with intercontinental distribution (Idiopidae, Idiopinae). MOLECULAR PHYLOGENETICS AND EVOLUTION, v. 206, p. 108323, 2025.
+    <strong>FONSECA-FERREIRA, R. ; DERKARABETIAN, S. ; MORALES, M. J. ; OPATOVA, V. ; BELINTANI, TIAGO ; LYLE, R. ; GUADANUCCI, J. P. L.</strong> Disconnecting trapdoors: Phylogenomic analyses reveal evolutionary contrasts in trapdoor spiders with intercontinental distribution (Idiopidae, Idiopinae). MOLECULAR PHYLOGENETICS AND EVOLUTION, v. 206, p. 108323, 2025.
   </div>
 
   <div class="publication">
@@ -144,39 +146,51 @@ p { line-height: 1.7em; }
   </div>
 
   <div class="publication">
-    <strong>KUNII, G. K. W ; FALCONE, R. ; GRAMINHA, M. A. S. ; NASCIMENTO, J. D. ; BELINTANI, T. ; OLIVEIRA, J. ; CLEMENTINO, L. C. ; ROSA, J. A. .</strong> Growth Curve, Morphological and Molecular Characterization of Two Strains of Trypanosoma cruzi (Kinetoplastida, Trypanosomatidae) isolated from Triatoma sherlocki (Hemiptera, Reduviidae, Triatominae). SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 55, p. 55:e05212021, 2022. <br>
+    <strong>KUNII, G. K. W ; FALCONE, R. ; GRAMINHA, M. A. S. ; NASCIMENTO, J. D. ; BELINTANI, T. ; OLIVEIRA, J. ; CLEMENTINO, L. C. ; ROSA, J. A. .</strong> Growth Curve, Morphological and Molecular Characterization of Two Strains of Trypanosoma cruzi isolated from Triatoma sherlocki. SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 55, p. 55:e05212021, 2022. <br>
     Citações: 1
   </div>
 
   <div class="publication">
-    <strong>CACINI, G. L. ; OLIVEIRA, J. ; BELINTANI, T. ; SOUZA, E. ; OLAIA, N. ; PINTO, M. C. ; ROSA, J. A. .</strong> Immature instars of three species of Rhodnius Stål, 1859 (Hemiptera, Reduviidae, Triatominae): morphology, morphometry and taxonomic implications. Parasites & Vectors, v. 1, p. 1-16, 2022. <br>
+    <strong>CACINI, G. L. ; OLIVEIRA, J. ; BELINTANI, T. ; SOUZA, E. ; OLAIA, N. ; PINTO, M. C. ; ROSA, J. A. .</strong> Immature instars of three species of Rhodnius Stål, 1859: morphology, morphometry and taxonomic implications. Parasites & Vectors, v. 1, p. 1-16, 2022. <br>
     Citações: 4
   </div>
 
   <div class="publication">
-    <strong>BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> New in morphometry: geometric morphometry of the external female genitalia of Triatominae (Hemiptera: Reduviidae). ACTA TROPICA, v. 1, p. 106383, 2022. <br>
+    <strong>BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> New in morphometry: geometric morphometry of the external female genitalia of Triatominae. ACTA TROPICA, v. 1, p. 106383, 2022. <br>
     Citações: 6
   </div>
 
-  <!-- Continue com todos os outros artigos periódicos da lista -->
-
-  <h2>Capítulos de livros publicados</h2>
-
-  <div class="book-chapter">
-    <strong>VIGANO, L. ; BELINTANI, TIAGO ; ROSA, J. A.</strong><br>
-    Estratégias laboratoriais para o diagnóstico da doença de Chagas. Rio Branco: Stricto Sensu, 2023. <br>
-    <a href="https://sseditora.com.br/ebooks/atualidades-em-medicina-tropical-no-brasil-interdisciplinaridade-2/" target="_blank">Link para e-book</a>
+  <div class="publication">
+    <strong>SILVA, L. A. ; BELINTANI, T. ; PAIVA, V. F. ; NASCIMENTO, JULIANA DAMIELI ; Rimoldi, A ; GARDIM, S. ; MELLO, F. ; OBARA, M. ; OLIVEIRA, J. ; ROSA, J. A. .</strong> Integrative taxonomy and phylogenetic systematics of the Triatoma rubrovaria subcomplex. ACTA TROPICA, v. -, p. 106699, 2022. <br>
+    Citações: 1
   </div>
 
-  <div class="book-chapter">
-    <strong>PAIVA, V. F. ; BELINTANI, TIAGO ; OLIVEIRA, J. ; SILVA, L. A. ; ARISTEU DA ROSA, JOÃO.</strong><br>
-    Entomoeepidemiologia da doença de Chagas na região sul do Brasil: coletas de Triatominae em sete municípios do Rio Grande do Sul. Rio Branco: Stricto Sensu, 2021.
+  <div class="publication">
+    <strong>KAWASIMA, E. S. ; PAIVA, V. F. ; BELINTANI, T. ; H.H.G, J. ; PINOTTI, HELOISA ; OLIVEIRA, J. ; ROSA, J. A. .</strong> Morphological studies of Cimex lectularius Linnaeus, 1758 (Hemiptera: Cimicidae). Revista Chilena de Entomologia, v. 48, p. 695-705, 2022. <br>
+    Citações: 1
   </div>
 
-  <div class="book-chapter">
-    <strong>BELINTANI, T.; PAIVA, V. F. ; ROSA, JOÃO ARISTEU DA .</strong><br>
-    Filogenia, evolução e dinâmica das doenças parasitárias e seus vetores. Rio Branco: Stricto Sensu, 2020.
+  <div class="publication">
+    <strong>PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, JADER ; GALVÃO, CLÉBER ; ROSA, J. A. .</strong> A review of the taxonomy and biology of Triatominae subspecies. PARASITOLOGY RESEARCH, v. 1, p. 1, 2022. <br>
+    Citações: 22
   </div>
+
+  <div class="publication">
+    <strong>BELINTANI, TIAGO; OLIVEIRA, JADER ; PINOTTI, HELOISA ; ALEVI, KAIO CESAR CHABOLI ; NASCIMENTO, JULIANA DAMIELI ; SASSO-CERRI, ESTELA ; GALVÃO, CLEBER ; ARISTEU DA ROSA, JOÃO .</strong> Characterization of Female External Genitalia and Eggs of Four South American Species of the Triatoma Laporte, 1832 Genus. INSECTS, v. 12, p. 537, 2021. <br>
+    Citações: 8
+  </div>
+
+  <div class="publication">
+    <strong>BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; GIL-SANTANA, H. ; ARISTEU DA ROSA, JOÃO .</strong> Wings or hemelytra? brief considerations on terminology in studies with Triatominae. Revista Chilena de Entomologia, v. 4, p. 669-672, 2021.
+  </div>
+
+  <div class="publication">
+    <strong>ROSSETO, L. ; PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, J. ; MENDONCA, V. J. ; ROSA, JOÃO ARISTEU DA .</strong> Checklist and phenetics studies of nymphs of two species of triatomines. SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 54, p. ---, 2021. <br>
+    Citações: 3
+  </div>
+
+  <div class="publication">
+    <strong>BILHEIRO, ADRIANA BENATTI ; DA ROSA, JOÃO ARISTEU ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; FONTES, GILBERTO ; MEDEIROS, JANSEN FERNAND
 
 
 </body>
