--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@ a:hover { text-decoration: underline; }
   </div>
 
   <div class="section">
-    <p>You can also use this form (if implemented) to contact me directly via the website.</p>
+    <p>BraveTheSun.</p>
   </div>
 </div>
 
